--- a/ansible_templates/doc.jinja
+++ b/ansible_templates/doc.jinja
@@ -50,7 +50,9 @@ module: {{module_name}}
 short_description: {{short_description}}
 description:
     - This module is able to configure a FortiGate or FortiOS by
-      allowing the user to configure {{path}} feature. Tested with FOS: {{version}}
+      allowing the user to configure {{path}} feature and {{name}} category.
+      Examples includes all options and need to be adjusted to datasources before usage.
+      Tested with FOS: {{version}}
 version_added: "2.6"
 author:
     - Miguel Angel Munoz (@mamunozgonzalez)
