--- a/ansible_templates/doc.jinja
+++ b/ansible_templates/doc.jinja
@@ -13,11 +13,12 @@
                 {%- endfor -%}
             {%- endif -%}
             {%- if value["category"] == "table" or value["category"] == "complex" %}
-            suboptions:                {{ doc_attributes(value["children"])|indent|indent }}
+            suboptions:{{ doc_attributes(value["children"])|indent|indent}}
             {%- endif -%}
             {% endfor -%}
-{%- endmacro %}
-#!/usr/bin/python
+{%- endmacro %}#!/usr/bin/python
+from ansible.module_utils.basic import AnsibleModule
+from __future__ import (absolute_import, division, print_function)
 # Copyright 2018 Fortinet, Inc.
 #
 # This program is free software: you can redistribute it and/or modify
@@ -35,8 +36,6 @@
 #
 # the lib use python logging can get it if the following is set in your
 # Ansible config.
-
-from __future__ import (absolute_import, division, print_function)
 
 __metaclass__ = type
 
