New example for system SDN Connector module

--- a/ansible_templates/code.jinja
+++ b/ansible_templates/code.jinja
@@ -81,6 +81,8 @@ str
 str
 {%- elif attribute["type"] == "ipv6-address"-%}
 str
+{%- elif attribute["type"] == "password"-%}
+str
 {%- else -%}
 {{attribute["type"]}}
 {%- endif -%}
