New example for webfilter override

--- a/ansible_templates/code.jinja
+++ b/ansible_templates/code.jinja
@@ -27,7 +27,7 @@ def filter_{{path}}_{{name}}_data(json):
     dictionary = {}
 
     for attribute in option_list:
-        if attribute in json:
+        if attribute in json and json[attribute] is not None:
             dictionary[attribute] = json[attribute]
 
     return dictionary
