Fix problem with 'password-2' type

--- a/ansible_templates/code.jinja
+++ b/ansible_templates/code.jinja
@@ -86,6 +86,8 @@ str
 str
 {%- elif attribute["type"] == "password"-%}
 str
+{%- elif attribute["type"] == "password-2"-%}
+str
 {%- elif attribute["type"] == "ipv4-classnet-any"-%}
 str
 {%- elif attribute["type"] == "ipv4-address-any"-%}
