New module for System Settings

--- a/ansible_templates/code.jinja
+++ b/ansible_templates/code.jinja
@@ -94,6 +94,8 @@ str
 str
 {%- elif attribute["type"] == "ipv4-classnet"-%}
 str
+{%- elif attribute["type"] == "ipv4-classnet-host"-%}
+str
 {%- elif attribute["type"] == "ipv4-netmask"-%}
 str
 {%- elif attribute["type"] == "ipv6-network"-%}
