Slight update of description

--- a/ansible_templates/doc.jinja
+++ b/ansible_templates/doc.jinja
@@ -47,9 +47,9 @@ DOCUMENTATION = '''
 module: {{module_name}}
 short_description: {{short_description}}
 description:
-    - This module is able to configure a FortiGate or FortiOS by
-      allowing the user to configure {{path}} feature and {{name}} category.
-      Examples includes all options and need to be adjusted to datasources before usage.
+    - This module is able to configure a FortiGate or FortiOS by allowing the
+      user to set and modify {{path}} feature and {{name}} category.
+      Examples include all parameters and values need to be adjusted to datasources before usage.
       Tested with FOS {{version}}
 version_added: "2.8"
 author:
